--- a/_includes/google_adsense.html
+++ b/_includes/google_adsense.html
@@ -1,7 +1,1 @@
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "{{site.google_ad_client}}",
-    enable_page_level_ads: true
-  });
-</script>
+<script data-ad-client="ca-pub-6960504135973114" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
